<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".personalInfoActivity">

    <include layout="@layout/personal_info_bar" />

    <ImageView
        android:id="@+id/personal_info_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_toolbar_pinfo" />

    <TextView
        android:id="@+id/personal_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:text = "user name"/>
    <TextView
        android:id="@+id/personal_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="25dp"
        android:text="@string/nickName" />

    <TextView
        android:id="@+id/personal_info_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/personal_info_instruction"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:text="@string/instruction"/>

</LinearLayout>